# MAtw

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  MA1.cpp  MA2.cpp  MA3.cpp  README.md  config.cpp  config.h
cmake/: CodeCoverage.cmake
doc/src/: A-BoringValidationResults.tex  AbstractEnglish.tex  AbstractGerman.tex  AlgoILS.tex  AlgoMA1.tex  AlgoMA2.tex  AlgoMA3.tex  C-Conclusions.tex  C-Eval1.tex  C1-Introduction.tex  C4-Experiments.tex  C5-ResultsAndDiscussion.tex  C6-RelatedWork.tex  ErklaerungDerSelbststaendigkeit.tex  biblatex.bib  danksagung.tex  input-validation-validationset-timings.tex  input-validation-validationset-violin.tex  thesis.tex  titlepage-de.tex  titlepage-en.tex
doc/src/generated-tables/: generate.sh  validation-trainingset-results.tex  validation-validationset-1a62-results.tex  validation-validationset-1a62-results.txt  validation-validationset-1oai-results.tex  validation-validationset-1oai-results.txt  validation-validationset-1on2-results.tex  validation-validationset-1on2-results.txt  validation-validationset-1or7-results.tex  validation-validationset-1or7-results.txt  validation-validationset-1pwt-results.tex  validation-validationset-1pwt-results.txt  validation-validationset-1qtn-results.tex  validation-validationset-1qtn-results.txt  validation-validationset-1sem-results.tex  validation-validationset-1ubq-results.tex  validation-validationset-BN-0-results.tex  validation-validationset-BN-0-results.txt  validation-validationset-BN-16-results.tex  validation-validationset-BN-16-results.txt  validation-validationset-BN-20-results.tex  validation-validationset-BN-20-results.txt  validation-validationset-BN-30-results.tex  validation-validationset-BN-30-results.txt  (+26 more)
doc/src/scripts/: LSD.py  (+9 more)
instances/: convert_vertex_numbers_to_start_with_one.py  training.list  validation.list
instances/validation/: 1oai.dgf  1on2.dgf  1or7.dgf  1pwt.dgf  1qtn.dgf  1ubq.dgf  BN_0.dgf  BN_16.dgf  BN_20.dgf  BN_30.dgf  BN_42.dgf  BN_47.dgf  bier127.tsp.dgf  bier127.tsp.dgf.orig  celar11.dgf  celar11.dgf.orig  diabetes.dgf  fl3795.dgf  fl3795.dgf.orig  fnl4461.dgf  fnl4461.dgf.orig  graph13.dgf  graph13.dgf.orig  knights8_8.dgf  link.dgf  munin1.dgf  oesoca+.dgf  pcb3038.dgf  pcb3038.dgf.orig  pigs.dgf  rl5934.dgf  rl5934.dgf.orig
lib/: CMakeLists.txt
lib/sqlite/: CMakeLists.txt  version
smac-v2.08.00-master-731/: run.sh
src/: CMakeLists.txt  TimeHelper.h  common.cpp  common.h  crossover.cpp  crossover.h  dbwriter.cpp  dbwriter.h  graph.h  localsearch.cpp  localsearch.h  mutation.cpp  mutation.h  population.cpp  population.h  recorder.cpp  recorder.h  selection.cpp  selection.h
tests/: CMakeLists.txt  test_MA1_snippets.cpp  test_common.cpp  test_crossover.cpp  test_dbwriter.cpp  test_graph.cpp  test_localsearch.cpp  test_mutation.cpp  test_population.cpp  test_selection.cpp
tools/executor/: executor.py
tools/sqlite/: results.py
validation/: setup.sh
(+55 files in other folders)
